# mocap_optitrack

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt~  README.md  mainpage.dox  manifest.xml  package.xml  package.xml~  setup.py  stack.xml
.github/workflows/: ci.yml
OptTest/: OptTest.sln
OptTest/OptTest/: OptTest.cpp  OptTest.vcxproj  OptTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
OptTest/optraklinux/: Makefile  Makefile.old  debug.mak  debug.mak.old  gcc_Debug.h  gcc_Release.h  mocap_config.cpp  optraklinux-Debug.vgdbsettings  optraklinux-Release.vgdbsettings  optraklinux.cpp  optraklinux.vcxproj  optraklinux.vcxproj.filters  release.mak
OptTest/optraklinux/mocap_optitrack/: mocap_datapackets.h  skeletons.h
OptTest/visgdb/: Makefile  Makefile.old  debug.mak  debug.mak.old  gcc_Debug.h  gcc_Release.h  release.mak  visgdb-Debug.vgdbsettings  visgdb-Release.vgdbsettings  visgdb.cpp  visgdb.vcxproj  visgdb.vcxproj.filters
cfg/: MocapOptitrack.cfg
config/: epfl.yaml  mocap.yaml
include/: Socket.h  SocketException.h  mocap_config.h  mocap_datapackets.h
include/mocap_optitrack/: data_model.h  mocap_calibrate.h  mocap_config.h  mocap_config.h.orig  mocap_datapackets.h  rigid_body_publisher.h  skeletons.h  socket.h  version.h
launch/: epfl_optitrack.launch  mocap.launch  mocap.launch.py
src/: CMakeLists.txt  Socket.cpp  data_conversions.cpp  data_conversions.h  data_model.cpp  mocap_calibrate.cpp  mocap_config.cpp  mocap_config.cpp.orig  mocap_datapackets.cpp  mocap_node.cpp  mocap_node.cpp.orig  natnet_messages.cpp  natnet_messages.h  natnet_packet_definition.cpp  natnet_packet_definition.h  rigid_body_publisher.cpp  socket.cpp  version.cpp
src/mocap_optitrack/managers/: calibration_manager.py
src/mocap_optitrack/nodes/: aescape_tracker_node.py
src/mocap_optitrack/util/: constants.py
src/natnet/: natnet_messages.cpp  natnet_messages.h  natnet_packet_definition.h
