<?xml version="1.0"?>
<package>
  <name>mocap_optitrack</name>
  <version>0.0.0</version>
  <description>mocap_optitrack</description>
  <license>BSD, GPL</license>
  <url type="website">http://ros.org/wiki/mocap_optitrack</url>
  <author>Andreas Hochrath and Torsten Fiolka</author>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>tf</build_depend>
</package>
